# stellaris-save-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_analysis.py  conquest_targets.py  crisis_analyzer.py  empire_analysis.py  governor_optimizer.py  hyperlane_network.py  modifier_analysis.py  nearby_targets.py  planet_resources.py  terraform_checker.py
stellaris_save_parser/: __init__.py  budget.py  bypass.py  economics.py  models.py  modifiers.py  parser.py  save.py  system.py  traits.py
